--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<h1>Welcome to Band Tracker</h1>
+<p>This site was created by Joseph King to allow users to have an account and track artists, venues, shows, and their own personal list of shows that they have been to.</p>
+<p>The website is still in production and further features will be added in the future. Current we are on version 0.2.1</p>
+<p>This website is a MEAN stack application and uses MongoDB, Express, Angular, and Node.</p> 
+<p>To learn more about the functionality portions of the site, visit our GitHub: <a href=""></a></p>
