--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="login-form-div">
+    <div style="height:25px;"></div>
+    <form class="login-form">
+        <label>Username: </label>
+        <input type="text"> <br><br>
+        <label>Password: </label>
+        <input type="text"> <br><br>
+        <button type="submit">Login</button>
+        <p>Not registered? click <a routerLink="/register">Here</a></p>
+    </form>
+</div>
