--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -11,10 +11,13 @@
                 <button><a routerLink="/shows">Shows</a></button>
             </div>
             <div class="link">
-                <button><a routerLink="/artists">Artistis</a></button>
+                <button><a routerLink="/artists">Artists</a></button>
             </div>
             <div class="link">
                 <button><a routerLink="/venues">Venues</a></button>
+            </div>
+            <div class="link">
+                <button><a routerLink="/your-shows">Your Shows</a></button>
             </div>
         </div>
         <div class="login-div">
