--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,1 +1,16 @@
-<p>register works!</p>
+<div class="register-form-div">
+    <div style="height:25px;"></div>
+    <form class="register-form">
+        <label>Username: </label>
+        <input type="text"> <br><br>
+        <label>Password: </label>
+        <input type="text"> <br><br>
+        <label>Confirm Password: </label>
+        <input type="text"> <br><br>
+        <label>Email: </label>
+        <input type="text"> <br><br>
+        <label>Confirm Email: </label>
+        <input type="text"> <br><br>
+        <button type="submit">Register</button>
+    </form>
+</div>
